force-app/src/objects/TR1__SF_Consent__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__Contact_Record_Types_to_Exclude__c</fullName>
        <description>Comma-separated list of Contact Record Type names(developer names) which should not be checked for valid Consent Records (e.g. Client Contact)</description>
        <inlineHelpText>Comma-separated list of Contact Record Type names(developer names) which should not be checked for valid Consent Records (e.g. Client Contact)</inlineHelpText>
        <label>Contact Record Types to Exclude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Email_Engagement_Channel_Type_Id__c</fullName>
        <description>Id of the Engagement channel type for Email. This type should be populated in the Contact Point Type Consent Records for contact individuals</description>
        <inlineHelpText>Id of the Engagement channel type for Email. This type should be populated in the Contact Point Type Consent Records for contact individuals</inlineHelpText>
        <label>Email Engagement Channel Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Enable_SF_Consent_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If enabled, the SF consent model is enforced</description>
        <inlineHelpText>If enabled, the SF consent model is enforced</inlineHelpText>
        <label>Enable SF Consent Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Enforce_Do_Not_Process_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If enabled, SF consent model respects the DoNotProcess value on an individual record</description>
        <inlineHelpText>If enabled, SF consent model respects the DoNotProcess value on an individual record</inlineHelpText>
        <label>Enforce Do Not Process Check</label>
        <type>Checkbox</type>
    </fields>
    <label>SF Consent</label>
</CustomObject>